# OxyMP

OxyMP/libs/oxymp/: Cargo.toml
OxyMP/libs/oxymp/src/: lib.rs
OxyMP/libs/oxymp/tests/: rewrite-libs.rs  test.rs
OxyMP/libs/oxymp/tests/tokens/: correct.rs  incorrect-attributes.rs  incorrect-attributes.stderr  incorrect-derives.stderr  incorrect-fields.rs  incorrect-fields.stderr
OxyMP/oxymp/: Cargo.toml  grammar-rules.txt  meta-grammar.txt
OxyMP/oxymp/oxymp-lexer/: Cargo.toml
OxyMP/oxymp/oxymp-lexer/src/: data.rs  lib.rs
OxyMP/oxymp/oxymp-lr/: Cargo.toml
OxyMP/oxymp/oxymp-lr/src/: lib.rs
OxyMP/oxymp/oxymp-macro-utils/src/: lib.rs
OxyMP/oxymp/oxymp-rd/: Cargo.toml
OxyMP/oxymp/oxymp-rd/src/: lib.rs
OxyMP/oxymp/oxymp-rd/src/grammar/: mod.rs
OxyMP/oxymp/oxymp-tokens/: Cargo.toml
OxyMP/oxymp/src/: attributes.rs  data.rs  grammar.rs  idents.rs  lib.rs  macros.rs  range.rs  symbols.rs  utils.rs
OxyMP/oxymp/src/automata/: dfa.rs  nfa.rs
OxyMP/oxymp/src/data/: grammar.rs  helpers.rs  lexer.rs  lr_parser.rs  mod.rs  processor.rs  rd_parser.rs  tokens.rs
OxyMP/oxymp/src/data-old/: processor.rs  rd_parser.rs  tokens.rs
OxyMP/oxymp/src/generate/: lexer.rs  mod.rs  rd.rs  rd_parser.rs  tokens.rs
OxyMP/oxymp/src/generate-old/: lexer.rs  rd.rs
OxyMP/oxymp/src/grammar/: mod.rs
OxyMP/oxymp/src/nfa/: mod.rs
OxyMP/oxymp/tests/: rewrite-libs.rs  test.rs  trybuild.rs
OxyMP/oxymp/tests/tokens/: correct.rs  incorrect-fields.rs  incorrect-marker-usage.rs  incorrect-marker-usage.stderr  incorrect-variants.rs  private-tokens.rs  private-tokens.stderr  public-tokens.rs
OxyMP/oxymp/tests/trybuild/independent/: unknown-marker.rs  unknown-marker.stderr
OxyMP/oxymp/tests/trybuild/integration/: no-prelude.rs
(+60 files in other folders)
